0.052		2012-09-05	T. R. Wyant
  No changes since 0.051_04.

0.051_04	2012-08-29	T. R. Wyant
  Remove support for the 'horizon' setting of the Astro::Coord::ECI
    'almanac_horizon' attribute. This was introdiced in 0.051_01, but on
    second thought I decided the 'horizon' logic was ill-conceived.
  Change the JSON representation of the International Launch Designator
    to track Space Track change by Space Track to REST predicate
    INTLDES.
  Further corrections to t/tle_json.t for OS-dependant failures.

0.051_03	2012-08-26	T. R. Wyant
  Enhance Astro::Coord::ECI::TLE->parse() to parse Iridium status off
    the name if it is present.

0.051_02	2012-08-23	T. R. Wyant
  Fudge the JSON in t/tle_json.t for system-to-system differences in
    floating point representations (2-digit vs 3-digit exponent).
  Remove the -json output formatting option from the satpass tle()
    command. Instead, provide eg/convert_tle.

0.051_01	2012-08-18	T. R. Wyant
  Add attribute almanac_horizon to Astro::Coord::ECI. This sets the
    horizon for almanac calculations. The default is 0 (radians), but
    other values are possible, as well as 'horizon' (meaning, use the
    value of the 'horizon' attribute) and 'height' (meaning, depress the
    horizon for the height of the observer above sea level). The satpass
    script allows access to this.
  Add JSON support for Astro::Coord::ECI::TLE and
    Astro::Coord::ECI::TLE::Iridium. This includes the ability of
    Astro::Coord::ECI::TLE->parse() to handle JSON orbital elements from
    the Space Track REST interface (provided the optional JSON module
    can be loaded), and hooks in both classes for them to serialize
    themselves into Space-Track-like JSON.
  Add -json option to the satpass script's tle() command, to get
    canonical JSON output.
  Make use of DateTime (if available) to interpret a non-numeric
    Astro::Coord::ECI::TLE::Iridium zone attribute. If DateTime is not